css/home.css
/* ... */
@media (max-width: 850px){
	.skill-htmlcss span{
		border-right: 80px solid white !important;
	}
	.skill-bootstrap span{
		border-right: 140px solid white !important;
	}
	.skill-sass span{
		border-right: 170px solid white !important;
	}
	.skill-jquery span{
		border-right: 210px solid white !important;
	}
	.skill-wordpress span{
		border-right: 160px solid white !important;
	}
	.skill-emberemblem span{
		border-right: 220px solid white !important;
	}
	.skill-adobe span{
		border-right: 60px solid white !important;
	}

	/*Skill Break*/
								
	.skill-photography span{
		border-right: 90px solid white !important;
		left: -100% !important;
	}
	.skill-illustration span{
		border-right: 110px solid white !important;
		left: -100% !important;
	}
	.skill-eating span{
		border-right: 5px solid white !important;
		left: -100% !important;
	}
}

@media (max-width: 800px){
	.bottom-nav-links a{
		padding: 0 10%;
	}
}


@media (max-width: 767px){

	.body-content div{
		margin: 0 60px;
	}

	.work-section h1{
		margin-left: 45px;
		padding-top: 90px;
	}

	.left-content{
		width: 100%;
	}

	.divider{
		width: 100%;
		margin-bottom: 0;
	}

	.body-content div p {
		margin-bottom: 90px;
	}

	.profile-image-box{
		display: none;
	}

	.skill-htmlcss:hover > span, .skill-bootstrap:hover > span, .skill-sass:hover > span, 
	.skill-jquery:hover > span, .skill-wordpress:hover > span, .skill-emberemblem:hover > span, 
	.skill-adobe:hover > span, 

	.skill-photography:hover > span, .skill-illustration:hover > span, 
	.skill-eating:hover > span{
		display: none;
		opacity: 0;
	}

	.break-hidden{
		display: inline-block;
	}

	.body-content div div p span {
		display: none;
	}

	#about{
		padding-top: 90px;
	}

	.body-content div div p:last-child {
		margin-bottom: 0px;
	}

	.work-section{
		margin-bottom: 45px !important;
	}
}


@media (max-width: 455px){

	.body-content div {
		margin: 0 30px;
	}

	.work-section div {
		padding: 5px !important;
	}

	.work-section h1{
		margin-left: 15px;
	}

	.border-top{
		padding: 18px 28px 0;
	}

	.border-top div div a {
		margin-left: 12px;
	}

	.border-bottom div a{
		padding: 0 12px;
	}

	.contact-block div {
		margin: 0 !important;
	}

	.contact-block input:last-child {
		width: 60px;
	}

}



/*Work Page*/

.middle-content{
	width: 100%;
	padding: 30px;
	text-align: center;
}

.middle-content h2{
	position: relative;
	top: -23px;
	z-index: 9999999;
	color: #DDDDDD;
	font-weight: 400 !important;
	cursor: default;
}

.gallery{
	margin-top: -17px;
}

.gallery-cell{
	width: 70%;
	text-align: center;
}

.caption{
	margin: 40px auto 0;
	width: 40%;
}

.caption p{
	text-align: left;
}

.workpage-work-section{
	padding: 0 15px !important;
	margin: 60px 0 10px 0!important;
	display: inline-block;
}

.workpage-work-section div{
	float: left;
}

.work-spacer{
	display: none !important;
}

.nav-box-small{
	width: 110px;
	height: 223px;
}

.nav-box-small a:first-child{
	margin-top: -7px;
}

.nav-box-small hr{
	float: right;
	width: 50px;
	margin: 30px 0;
}



/*Media Queries*/


@media (max-width: 991px){

	.nav-box-small{
		display: none;
	}

	.middle-content{
		padding-top: 60px;
	}

	.middle-content h2{
		top: -35px;
		width: 250px;
		margin: 0 auto;
	}

	.workpage-work-section div{
		float: none;
		display: inline-block;
		padding: 0 10px;
	}

	.caption{
		width: 65%;
	}
}

@media (max-width: 767px){

	.caption{
		width: 75%;
	}

	.work-spacer{
		display: inline-block !important;
		opacity: 0;
	}

	.workpage-work-section div a img{
		padding: 10px 0;
	}
	.workpage-work-section div{
		padding: 0 10px;
	}

}

@media (max-width: 550px){

	.col-xs-3{
		width: 43% !important;
	}

	.middle-content h2{
		right: -45px;
		text-align: right;
	}

	.flickity-page-dots{
		bottom: -45px !important;
	}

	.middle-content img{
		padding: 5px;
	}

	.gallery{
		padding-top: 30px;
	}

	.caption{
		margin: 75px auto 0;
	}

}

